--- a/index.html
+++ b/index.html
@@ -411,11 +411,11 @@
         "KonoSuba (Temporada 1)": {
           cover: "portada/portadas1fk.png",
           season2Key: "KonoSuba (Temporada 2)",
-          openingUrl: "https://www.youtube.com/watch?v=fpG3BPNQepY",  // ejemplo
-          endingUrl: "",
+          openingUrl: "https://www.burstcloud.co/embed/67a4691f55a6d1fe64dc1e1b6f67ba290af75cf63c59a84a2d02de0e7cbecefe/Opening.mp4",  // ejemplo
+          endingUrl: "https://www.burstcloud.co/embed/1c16c761c9fbc8d957132e51116d96aea716a255ece139a88225d5f95a6a0cd9/Edning%20%20Full%20Version.mp4",
           info: {
-            audio: "Japonés",
-            subs: "Español (SUB)",
+            audio: "Latino",
+            subs: "Español (textos)",
             oped: "Clean Version",
             karaoke: "Sí",
             quality: "1080p (BD RPmods)",
@@ -428,9 +428,8 @@
           ],
           extrasAudio: { title: "Radio KonoSuba — Selección", url: "" },
           extras: [
-            { id:"ksb-extra-1", title:"Extra 01 — Radio (mp3)", url:"" },
-            { id:"ksb-extra-2", title:"Extra 02 — Clean OP (BD)", url:"" },
-            { id:"ksb-extra-3", title:"Extra 03 — Clean ED (BD)", url:"" }
+            { id:"ksb-extra-1", title:"Konosuba Opening (TV Versión)", url:"https://www.youtube.com/watch?v=AubeXRKtU8U&list=RDJhiU4IAZtug&start_radio=1" },
+            { id:"ksb-extra-2", title:"Konosuba Ending (TV Versión)", url:"https://www.youtube.com/watch?v=JhiU4IAZtug" },
           ],
           extrasPlaylist: {
             cover: "extra/CB_COVER.png",
