--- a/index.html
+++ b/index.html
@@ -428,8 +428,8 @@
           ],
           extrasAudio: { title: "Radio KonoSuba — Selección", url: "" },
           extras: [
-            { id:"ksb-extra-1", title:"Konosuba Opening (TV Versión)", url:"https://www.youtube.com/watch?v=AubeXRKtU8U&list=RDJhiU4IAZtug&start_radio=1" },
-            { id:"ksb-extra-2", title:"Konosuba Ending (TV Versión)", url:"https://www.youtube.com/watch?v=JhiU4IAZtug" },
+            { id:"ksb-extra-1", title:"Konosuba Opening (JAPONÉS) (Crunchyroll)", url:"https://www.youtube.com/watch?v=fpG3BPNQepY" },
+            { id:"ksb-extra-2", title:"Konosuba Ending (JAPONÉS) (Crunchyroll)", url:"https://www.youtube.com/watch?v=JhiU4IAZtug" },
           ],
           extrasPlaylist: {
             cover: "extra/CB_COVER.png",
@@ -1007,4 +1007,5 @@
 </body>
 
 </html>
+
 
