--- a/index.html
+++ b/index.html
@@ -448,6 +448,8 @@
           },
           extrasAudio: { title: "Radio KonoSuba — Selección", url: "" },
           extras: [
+            { id:"ksb-extra-1", title:"Konosuba Opening Japonés (BD RPmods)", url:"https://www.burstcloud.co/embed/a016efb21b954af2e08cd8759cf69363274aa577b3de20ea0e362251c6c977a0/Version%20OP%20clean%20solo.mp4" },
+            { id:"ksb-extra-1", title:"Konosuba Ending Japonés (Aqua y Kazuma ARC Ver. BD RPmods)", url:"https://www.burstcloud.co/embed/3231e849fe3142dc8ee4092e84f939d7a31e894c632855c11537e798944f60e3/Version%20ED%20clean%20solo.mp4" },
             { id:"ksb-extra-1", title:"Konosuba Opening (JAPONÉS) (Crunchyroll)", url:"https://www.youtube.com/watch?v=fpG3BPNQepY" },
             { id:"ksb-extra-2", title:"Konosuba Ending (JAPONÉS) (Crunchyroll)", url:"https://www.youtube.com/watch?v=JhiU4IAZtug" }
           ],
@@ -935,4 +937,5 @@
     if(firstBD){ firstBD.click(); }
   </script>
 </body>
+
 </html>
