Update index  RPmods2.html

--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
           endingUrl: "",    // Ending propio
           info: {
             audio: "Latino / Japonés",
-            subs: "Latino",
+            subs: "Español (SUB)",
             oped: "Clean Version (BD RPmods)",
             karaoke: "Sí",
             quality: "1080p (BD)",
@@ -417,7 +417,7 @@
           openingUrl: "https://www.burstcloud.co/embed/67a4691f55a6d1fe64dc1e1b6f67ba290af75cf63c59a84a2d02de0e7cbecefe/Opening.mp4",  // ejemplo
           endingUrl: "https://www.burstcloud.co/embed/1c16c761c9fbc8d957132e51116d96aea716a255ece139a88225d5f95a6a0cd9/Edning%20%20Full%20Version.mp4",
           info: {
-            audio: "Japonés",
+            audio: "Latino / Japonés",
             subs: "Español (SUB)",
             oped: "Clean Version",
             karaoke: "Sí",
@@ -438,10 +438,10 @@
                 players:{ player1:"https://rodrigorpmods.rpmlive.online/#xuakg9", player2:"", fb:"", fb720:"", player3:"" } }
             ],
             sub: [
-              { id:"ksb-t1-sub-c01-02", title:"Capítulo 01", info:"Sub Español — BD RPmods 1080p",
-                players:{ player1:"https://www.burstcloud.co/embed/8bba8c60b5711fc8e4b2b8c8ab0fdab782e684b8588bcd18e89baa0f62271430/capitulo%2001%20version%20jap%C3%83%C2%B3nes%20completo%20BD.mp4", player2:"", fb:"", fb720:"", player3:"" } },
-              { id:"ksb-t1-sub-prox1", title:"Próximamente — Capítulo 02", info:"Sub Español — Esperando estreno", status:"Próximo",
-                players:{ player1:"", player2:"", fb:"", fb720:"", player3:"" } },
+              { id:"ksb-t1-sub-c01", title:"Capítulo 01", info:"Sub Español — BD RPmods 1080p",
+                players:{ player1:"https://www.burstcloud.co/embed/8bba8c60b5711fc8e4b2b8c8ab0fdab782e684b8588bcd18e89baa0f62271430/capitulo%2001%20version%20jap%C3%83%C2%B3nes%20completo%20BD.mp4", player2:"", fb:"https://www.facebook.com/61583923336421/videos/konosuba-capitulo-1-bd-rpmods-hdaudio-jap%C3%B3nes-oped-ncd-sub-espa%C3%B1ol-adaptaci%C3%B3nkon/25318830187736883/", fb720:"", player3:"" } },
+              { id:"ksb-t1-sub-c02-c03", title:"Capítulo 02 y 03", info:"Sub Español — BD RPmods 1080p",
+                players:{ player1:"https://www.burstcloud.co/embed/c790629eff961607bf252cabb9cc847b00fb8a661bc4bc5d54acfc0c43ac7664/capitulo%2002%20y%2003%20version%20jap%C3%83%C2%B3nes%20completo%20BD.mp4", player2:"", fb:"https://www.facebook.com/61583923336421/videos/konosuba-capitulo-2-y-3-bd-rpmods-hdaudio-jap%C3%B3nes-oped-ncd-sub-espa%C3%B1ol-adaptaci%C3%B3/732225486581915/", fb720:"", player3:"" } },
               { id:"ksb-t1-sub-prox2", title:"Próximamente — Capítulo 03", info:"Sub Español — Esperando estreno", status:"Próximo",
                 players:{ player1:"", player2:"", fb:"", fb720:"", player3:"" } }
             ]
@@ -939,3 +939,4 @@
 </body>
 
 </html>
+
